--- a/assets/css/2-base/_colors.sass
+++ b/assets/css/2-base/_colors.sass
@@ -40,12 +40,12 @@ $media-box-bg: #f7f7f7
 
 $header-bg: #ececec
 $header-bg-trans: transparentize($header-bg, 0.8)
-$footer-bg: $header-bg
+$footer-bg: darken($header-bg,0)
 
 $header-color: $dark-text
 $footer-color: $light-text
 
-$link-color: $light-blue
+$link-color: lighten($green,5)
 
 $accent-color: $orange
 $nav-accent: $accent-color
