--- a/assets/css/2-base/_structure.sass
+++ b/assets/css/2-base/_structure.sass
@@ -1,4 +1,5 @@
-$header-height: 9vh
+$header-height: 70px
+$tablet-header-height: 70px
 $header-margin: 62px
 
 $large-screen-up: new-breakpoint(min-width $large-screen 12)
