--- a/assets/css/2-base/_typography.scss
+++ b/assets/css/2-base/_typography.scss
@@ -3,12 +3,12 @@
 // $helvetica =  'Helvetica Nue'
 
 body {
-  @include font-feature-settings("kern", "liga", "pnum");
-  -webkit-font-smoothing: antialiased;
-  color: $base-font-color;
-  font-family: $base-font-family;
-  font-size: $base-font-size;
-  line-height: $base-line-height;
+   @include font-feature-settings("kern", "liga", "pnum");
+   -webkit-font-smoothing: antialiased;
+   color: $base-font-color;
+   font-family: $base-font-family;
+   font-size: $base-font-size;
+   line-height: $base-line-height;
 }
 
 h1,
@@ -17,17 +17,20 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: $heading-font-family;
-  // font-size: $base-font-size;
-  line-height: $heading-line-height;
-  margin: 0 0 $small-spacing;
-  font-weight: $bold;
+   font-family: $heading-font-family;
+   // font-size: $base-font-size;
+   line-height: $heading-line-height;
+   margin: 0 0 $small-spacing;
+   font-weight: $bold;
 }
 .thin-heading{
    @extend h1;
+   color: $light-text;
    font-weight: $thin;
    font-size: 50px;
-   color: $light-text;
+   @media (max-width: $large-screen) {
+      font-size: 40px;
+   }
    margin: 0px 0px 0px;
 }
 .thick-heading{
@@ -39,7 +42,16 @@ h6 {
 }
 
 p {
-  margin: 0 0 $small-spacing;
+   margin: 0 0 $small-spacing;
+   font-size: 16px;
+   // font-weight: 400;
+}
+.p-section{
+   font-size: 20px;
+   font-weight: 200;
+   @media (max-width: $large-screen) {
+      font-size: 18px;
+   }
 }
 
 a,.link {
@@ -51,12 +63,12 @@ a,.link {
    &:active,
    &:focus,
    &:hover {
-     color: darken($link-color, 10%);
+      color: lighten($link-color, 10%);
    }
 
    &:active,
    &:focus {
-     outline: none;
+      outline: none;
    }
 }
 a.category-link{
