--- a/assets/css/4-page-layouts/_recommendations.sass
+++ b/assets/css/4-page-layouts/_recommendations.sass
@@ -5,16 +5,18 @@
          color: $light-text
          padding: 15px 40px 0px
          h1
-            @extend .thin-heading
             margin-left: -4px
             margin-bottom: 4px
          +media($tablet)
             padding: 15px 20px 0px
+         p
+            @extend .p-section
 
+//GÖR OM denna och themes-section till en klass och en som extendar!
 #recommendations-section
    background: $white
    section
-      padding: 10px 0
+      padding: 10px 0 60px
       +span-columns(12)
       // background: lightblue
       +media($desktop)
@@ -26,38 +28,20 @@
          +media($tablet)
             +span-columns(7)
             +shift(0.5)
-            // +omega(n)
-         // +outer-container
-         // +display(flex)
-         // @include align-items(center)
-         // @include flex-direction(row)
-         // @include flex-wrap(wrap)
-         // @include align-content(space-around)
-         // @include justify-content(space-between)
+
          background: $media-box-bg
          box-shadow: 1px 0px 2px #999
          color: $dark-text
          margin: 10px 0 10px
          min-height: 300px
-         // display: block
          padding: 10px
          position: relative
-         // h3.top-h3
-         //    font-size: 1.7em
-         //    text-align: center
-         //    margin-top: -10px
-         //    padding: 0px auto 10px
          div
-            // background: red
-            // display: inline-block
             min-height: 200px
             +span-columns(6)
-            // @include flex-basis(20em)
-            // @include flex-grow(1)
          .img-holder
             +clearfix
             position: absolute
-            // +fill-parent
             +span-columns(6)
             height: calc(100% - 20px)
             background: $soft-gray
@@ -85,7 +69,6 @@
                &:nth-child(2)
                   display: none
                   margin: 5px 0
-
             h3
                color: $semi-dark-gray
                text-align: left
@@ -127,7 +110,3 @@
                      color: $theme-link-color
                      width: 4px
                      style: solid
-            // +size(100px)
-            // @include flex-basis(10px)
-            // @include flex(1)
-            // background: lightgreen
