--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,41 +8,43 @@
 
          <div class="footer-sections">
             <div class="footer-section">
-               <h3 class="footer-section-header">Projektet</h3>
+               <h3 class="footer-section-header">Få nyheter från oss direkt via epost</h3>
                <ul>
-                  <li>qwerty zxc asd</li>
-                  <li>qwerty zxc asd</li>
-                  <li>qwerty zxc asd</li>
+                  <li>
+                     <input type="email" spellcheck="false" placeholder="example@email.com">
+                     <button><i class="fa fa-paper-plane-o"></i></button>
+                  </li>
                </ul>
             </div>
             <div class="footer-section">
-               <h3 class="footer-section-header">Forskargruppen</h3>
+               <h3 class="footer-section-header">Forskningen</h3>
                <ul>
-                  <li>qwerty zxc asd</li>
-                  <li>qwerty zxc asd</li>
-                  <li>qwerty zxc asd</li>
+                  <li><a href="/about">Lär mer om oss här</a></li>
+                  <li><a href="#">Besök forskargrupp</a></li>
                </ul>
             </div>
             <div class="footer-section">
                <h3 class="footer-section-header">Kontakta oss</h3>
                <ul>
-                  <li>qwerty zxc asd</li>
-                  <li>qwerty zxc asd</li>
-                  <li>qwerty zxc asd</li>
+                  <li><a href="/about">Kontakta oss via epost</a></li>
+                  <li><a href="#">Om den här sidan</a></li>
                </ul>
             </div>
          </div>
          <div class="footer-logos">
             <div class="footer-logo">
-               <img class="footer-logo-bildetg" src="/assets/img/etg.png" alt="Etg" />
+               <!-- <img class="footer-logo-bildetg" src="/assets/img/etg.png" alt="Etg" /> -->
             </div>
             <div class="footer-logo">
-               <img class="footer-logo-bildliu" src="/assets/img/liulogga.png" alt="liu" />
+               <!-- <img class="footer-logo-bildliu" src="/assets/img/liulogga.png" alt="liu" /> -->
             </div>
             <div class="footer-logo">
-               <img class="footer-logo-bildlu" src="/assets/img/lulogga.png" alt="lu" />
+               <!-- <img class="footer-logo-bildlu" src="/assets/img/lulogga.png" alt="lu" /> -->
             </div>
          </div>
+         <!-- <div class="end">
+            <p>Nåt skit om sidan</p>
+         </div> -->
       </div>
    </div>
 </footer>
