--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,13 +13,13 @@
             <li><a href="{{node.url}}">{{node.title}}</a></li>
             {% endif %}
             {% endfor %} -->
-            <li><a id="navLink1" {% if page.url == '/' %}class="nav-item-active"{% endif %} href="/"> Start </a></li>
-            <li><a id="navLink2" {% if page.url == '/themes/' %}class="nav-item-active"{% endif %} href="/themes/">Teman</a></li>
-            <li><a id="navLink3" {% if page.url == '/recommendations/' %}class="nav-item-active"{% endif %} href="/recommendations/"> Rekomenderade Digitala Läromedel</a></li>
-            <li><a id="navLink4" >Demo</a></li>
-            <li><a id="navLink5" >Artiklar</a></li>
-            <li><a id="navLink6" >Nyheter</a></li>
-            <li><a id="navLink7" >Om Oss</a></li>
+            <li><a  {% if page.url == '/' %}class="nav-item-active"{% endif %} href="/"> Start </a></li>
+            <li><a  {% if page.url == '/themes/' %}class="nav-item-active"{% endif %} href="/themes/">Teman</a></li>
+            <li><a  {% if page.url == '/recommendations/' %}class="nav-item-active"{% endif %} href="/recommendations/"> Rekomenderade Digitala Läromedel</a></li>
+            <!-- <li><a  >Demo</a></li> -->
+            <li><a  >Artiklar</a></li>
+            <li><a  >Nyheter</a></li>
+            <li><a  >Om Oss</a></li>
             <!-- <li><a href="">Kontakt</a></li> -->
          </ul>
       </nav>
