--- a/assets/css/4-page-layouts/_test.sass
+++ b/assets/css/4-page-layouts/_test.sass
@@ -45,9 +45,7 @@
 //    margin: 0
 //    padding: 10px 0
 
-iframe
-   +size(900px 600px)
-   box-shadow: 1px 1px 4px black
+
 
 // html
 //    height: 100%
@@ -56,43 +54,44 @@ body.start-body
    // padding-top: 91vh
    // padding-top: calc(100vh - 63px)
 
-.overlay-olive
-   background: fade-out(olive, 0.86)
-   +size(100%)
-.round
-   border-radius: 50%
 
-.banner
-   //fixed -> bilden stanar och körs över
-   position: relative
-   position: fixed
-   // display: none
-   z-index: -10
-   top: 0px
-   width: 100%
-   height: 100vh
-   background: honeydew
-   background-image: url("/assets/img/kids.jpg")
-   background-size: cover
-   background-repeat: no-repeat
-   .overlay-olive
-      +flex(1)
-      +display(flex)
-      +flex-direction(row)
-      +justify-content(center)
-      h1
-         // margin-top: calc(50vh - 63px)
-         margin-top: 40px
-         color: $white
-         font:
-            size: 70px
+//
+// .banner
+//    //fixed -> bilden stanar och körs över
+//    position: relative
+//    position: fixed
+//    display: none
+//    z-index: -10
+//    top: 0px
+//    width: 100%
+//    height: 100vh
+//    background: honeydew
+//    background-image: url("/assets/img/kids.jpg")
+//    background-size: cover
+//    background-repeat: no-repeat
+//    .overlay-olive
+//       +flex(1)
+//       +display(flex)
+//       +flex-direction(row)
+//       +justify-content(center)
+//       h1
+//          // margin-top: calc(50vh - 63px)
+//          // margin-top: 40px
+//          color: $white
+//          font:
+//             size: 70px
 
 .page-content
    // min-height: calc(100vh - 63px)
    // min-height: 91vh
    position: relative
    background: rgba(0,0,0,0)
-   margin-top: $header-margin
+
+   margin-top: $header-height
+   +media($tablet)
+      margin-top: $tablet-header-height
+   @media print
+      margin-top: 10px
 .wrapper
    @include outer-container
    // border: 2px dashed #bbb
