--- a/assets/css/4-page-layouts/_theme.sass
+++ b/assets/css/4-page-layouts/_theme.sass
@@ -1,3 +1,7 @@
+iframe
+   +size(900px 600px)
+   box-shadow: 1px 1px 4px black
+   
 .disable-button
    pointer-events: none
    cursor: default
@@ -12,6 +16,7 @@
    @media print
       text-align: left
       background-color: white
+      width: 94%
    a
       @media print
          width: 100%
@@ -23,12 +28,13 @@
       color: $dark-text
       // font-size: 50px
       +media($tablet)
-         // font-size: 36px
          padding-top: 20px
+         // font-size: 36px
       padding: 20px 0 0px
       margin-bottom: 0px
       @media print
-         margin-bottom: 20px
+         padding: 0px
+         margin: 0px 0px 20px
    hr
       @media print
          display: none
@@ -42,12 +48,13 @@
       text-align: left
       margin: 10px 0
       @media print
-         font-family: $serif
+         // font-family: $serif
          font-weight: 400
          line-height: 1.8em
          margin-top: 4px
          // line-height: 1.5
    .video-wrapper
+      margin-bottom: 30px
       @media print
          display: none
    iframe
@@ -60,6 +67,7 @@
       font-style: italic
    h4
       @extend .thick-heading
+      font-weight: 600
       font-size: 18px
       padding: 0
 
