added articles pages

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
             <li><a  {% if page.url == '/themes/' %}class="nav-item-active"{% endif %} href="/themes/">Teman</a></li>
             <li><a  {% if page.url == '/recommendations/' %}class="nav-item-active"{% endif %} href="/recommendations/"> Rekomenderade Digitala Läromedel</a></li>
             <!-- <li><a  >Demo</a></li> -->
-            <li><a  >Artiklar</a></li>
+            <li><a  {% if page.url == '/articles/' %}class="nav-item-active"{% endif %} href="/articles/"> Artiklar </a></li>
             <li><a  >Nyheter</a></li>
             <li><a  >Om Oss</a></li>
             <!-- <li><a href="">Kontakt</a></li> -->
