minor change in sass files

--- a/assets/css/4-page-layouts/_test.sass
+++ b/assets/css/4-page-layouts/_test.sass
@@ -97,6 +97,7 @@ body.start-body
    // border: 2px dashed #bbb
    border-top: none
    border-bottom: none
+   padding: 0px 5px
    // background-color: #999
 
 .page-content > .wrapper
