added blank contact page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,6 +19,7 @@
             <!-- <li><a  >Demo</a></li> -->
             <li><a  {% if page.url == '/articles/' %}class="nav-item-active"{% endif %} href="/articles/"> Artiklar </a></li>
             <li><a  >Nyheter</a></li>
+            <li><a  {% if page.url == '/contact/' %}class="nav-item-active"{% endif %} href="/contact/"> Kontakt </a></li>
             <li><a  {% if page.url == '/about/' %}class="nav-item-active"{% endif %} href="/about/"> Om Oss </a></li>
          </ul>
       </nav>
