--- a/assets/css/4-page-layouts/_header.sass
+++ b/assets/css/4-page-layouts/_header.sass
@@ -64,15 +64,15 @@ header
             li
                +flex(1)
                &:nth-child(3)
-                  +flex(1.9)
+                  +flex(1.4)
 
                   a
-                     line-height: 1.2
-                     // margin: 0px null 0px
-                     padding: 0px 1px 0px
-                     font-size: 1.0em
-                     +media($tablet)
-                        font-size: 0.8em
+                     // line-height: 1.2
+                     // // margin: 0px null 0px
+                     // padding: 0px 1px 0px
+                     // font-size: 1.0em
+                     // +media($tablet)
+                     //    font-size: 0.8em
                a
 
                   border-bottom: 12px $header-bg solid
